# shlomes

./: .gitignore  .pre-commit-hooks.yaml  Cargo.toml  DETAILS.md  LICENSE  README.md  action.yml  dist-workspace.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml  update-ml-formula.yml
docs/: architecture-rules.md  coverage-gaps.md  diagram-coherence.md  drift-detection.md  index.html
src/: check.rs  commands.rs  config.rs  constswap.rs  coverage.rs  entrypoints.rs  evidence.rs  extract.rs  findings.rs  judge.rs  main.rs  report.rs  retrieve.rs  rules.rs  sarif.rs  settings.rs  testutil.rs  verify.rs
src/code/: extract.rs  facts.rs  lang.rs  mod.rs  schema.rs  symbol.rs
src/diagram/: align.rs  class.rs  dot.rs  er.rs  ground.rs  mermaid.rs  mod.rs  plantuml.rs  sequence.rs  state.rs  tests.rs
src/doc_aligner/: __init__.py  cli.py  findings.py
src/doc_aligner/extract/: __init__.py
src/doc_aligner/retrieve/: __init__.py
src/doc_aligner/verify/: __init__.py
src/drift/: coupling.rs  tests.rs
src/judge/: claims.rs  mod.rs
src/rules/: audit.rs  extract.rs  mod.rs  verify.rs
tests/: cli.rs  test_layer1.py
tests/fixtures/: constswap_corpus.jsonl  nli_decision_corpus.jsonl  nli_e2e_corpus.jsonl  prose_corpus.jsonl
tools/: diagram_synth_eval.py  gen_holdout_sample.py  gen_prose_corpus.py
