[package]
name = "shlomes"
version = "0.1.0"
edition = "2021"
description = "Sanity-check CLAUDE.md, project docs, and code against each other for coherence drift."
license = "MIT"
readme = "README.md"

[[bin]]
name = "shlomes"
path = "src/main.rs"

[features]
default = []
# Layer 2 local retrieval (jina code embeddings via fastembed) + Layer 3
# verification (NLI cross-encoder via ort/tokenizers). Both ONNX, fully offline
# after the first model download.
ml = ["dep:fastembed", "dep:anyhow", "dep:hf-hub", "dep:ort", "dep:tokenizers"]

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
# Per-file parsing in `CodeIndex::build` is embarrassingly parallel (each file
# gets its own tree-sitter parser); rayon fans it across cores.
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Layer 2 (local embeddings). Optional so the deterministic build stays lean.
fastembed = { version = "5", optional = true }
anyhow = { version = "1", optional = true }
# Used to fetch the *quantized* jina ONNX (fastembed's built-in variant only
# offers fp32). Feature flags mirror fastembed's own hf-hub usage so cargo
# unifies to a single crate instance / TLS stack.
hf-hub = { version = "0.5", default-features = false, features = ["ureq", "native-tls"], optional = true }
# Layer 3 NLI judge: raw ONNX inference (ort) + the model's tokenizer. Pinned to
# the same versions fastembed resolves so cargo unifies to one ort/onnxruntime.
ort = { version = "2.0.0-rc.12", optional = true }
tokenizers = { version = "0.22", optional = true }
tree-sitter = "0.26"
tree-sitter-tags = "0.26"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-java = "0.23.5"
streaming-iterator = "0.1.9"

[profile.release]
strip = true
lto = true
